# jav_scraper

./: Cargo.toml
src/: main.rs
src/controller/: movie.rs
src/service/: mod.rs  post_123av.rs
