[package]
name = "scraper_api_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12.9", features = ["json", "rustls-tls"] }
scraper = "0.22.0"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
